--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -4,6 +4,9 @@ jobs:
   gitHubActionForPytest:
     name: GitHub Action for pytest
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./tests
     steps:
     - uses: actions/checkout@master
     - name: GitHub Action for pytest
